--- a/sdb-eid-be/sdb-eid-be.csproj
+++ b/sdb-eid-be/sdb-eid-be.csproj
@@ -5,5 +5,9 @@
     <RootNamespace>sdb_eid_be</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
 
 </Project>
